--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,13 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/assets/icon/favicon.png" />
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="%PUBLIC_URL%/assets/icon/favicon.png"
+    />
+
+    <link rel="stylesheet" href="../node_modules/magic.css" />
 
     <!-- add to homescreen for ios -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -27,5 +33,4 @@
   <body>
     <div id="root"></div>
   </body>
-
 </html>
